# pantomath

./: .coveragerc  .editorconfig  .flake8  .gitignore  .gitlint  .pre-commit-config.yaml  .python-version  Makefile  README.md  config.yaml.example  mypy.ini  pyproject.toml  tox.ini  whitelist.txt
.github/workflows/: build.yml
docs/source/: conf.py  index.rst
src/pantomath/: __init__.py  cli.py  registry.py
src/pantomath/datasource/: __init__.py
src/pantomath/provider/: __init__.py
src/pantomath/provider/aws/: __init__.py
src/pantomath/provider/aws/cloudfront/: __init__.py  distributions.py
src/pantomath/provider/aws/cloudtrail/: __init__.py  trails.py
src/pantomath/provider/aws/dax/: __init__.py  clusters.py
src/pantomath/provider/aws/docdb/: __init__.py  clusters.py
src/pantomath/provider/aws/dynamodb/: __init__.py  tables.py
src/pantomath/provider/aws/ebs/: __init__.py  snapshots.py  volumes.py
src/pantomath/provider/aws/ec2/: __init__.py  alb.py  clb.py  eip.py  glb.py  images.py  instances.py  nat_gateways.py  nlb.py  vpc_endpoints.py
src/pantomath/provider/aws/ecs/: __init__.py  clusters.py
src/pantomath/provider/aws/efs/: __init__.py  file_systems.py
src/pantomath/provider/aws/eks/: __init__.py  clusters.py
src/pantomath/provider/aws/elasticache/: __init__.py  clusters.py
src/pantomath/provider/aws/emr/: __init__.py  clusters.py
src/pantomath/provider/aws/es/: __init__.py  domains.py
src/pantomath/provider/aws/lambda_/: __init__.py  functions.py
src/pantomath/provider/aws/rds/: __init__.py  instances.py  snapshots.py
src/pantomath/provider/aws/redshift/: __init__.py  clusters.py
src/pantomath/provider/aws/route53/: __init__.py  domains.py
src/pantomath/provider/aws/s3/: __init__.py  buckets.py
tests/: registry_test.py
