[tool.poetry]
name = "pantomath"
version = "0.1.0"
description = "Easily collect, analyze, and explore FinOps data"
license = "SSPL-1.0"
authors = ["Jean-Marc Fontaine <jm@jmfontaine.net>"]
readme = "README.md"
homepage = "https://github.com/jmfontaine/pantomath"
repository = "https://github.com/jmfontaine/pantomath"
keywords = ["finops", "cloud", "aws"]

[tool.poetry.dependencies]
python = "^3.7"
aiobotocore = "^1.4.1"
aiostream = "^0.4.3"
asyncpg = "^0.24.0"
click = "^8.0.1"
confuse = "^1.5.0"
jmespath = "^0.10.0"
loguru = "^0.5.3"
rich = "^10.10.0"
SQLAlchemy = "^1.4.23"

[tool.poetry.dev-dependencies]
black = "^21.8b0"
commitizen = "^2.20.0"
coverage = "^6.0.2"
flake8 = "^3.9.2"
flake8-absolute-import = "^1.0"
flake8-builtins = "^1.5.3"
flake8-comprehensions = "^3.6.1"
flake8-eradicate = "^1.1.0"
flake8-functions = "^0.0.6"
flake8-mutable = "^1.2.0"
flake8-return = "^1.1.3"
flake8-rst-docstrings = "^0.2.3"
flake8-simplify = "^0.14.2"
flake8-spellcheck = "^0.24.0"
interrogate = "^1.5.0"
isort = "^5.9.3"
mypy = "^0.910"
pre-commit = "^2.15.0"
pydocstyle = "^6.1.1"
pytest = "^5.2"
pytest-randomly = "^3.10.1"
Sphinx = "^4.2.0"
sphinx-autoapi = "^1.8.4"
sphinx-rtd-theme = "^1.0.0"
types-python-dateutil = "^2.8.0"
types-setuptools = "^57.4.0"

[tool.poetry.scripts]
pantomath = "pantomath.cli:cli"

[tool.commitizen]
bump_message = "bump: Version $current_version → $new_version"
name = "cz_conventional_commits"
tag_format = "$version"
update_changelog_on_bump = true
version = "0.1.0"
version_files = ["pyproject.toml:tool.poetry.version"]

[tool.interrogate]
badge-style = "plastic"
exclude = ["docs", "tests"]
fail-under = 100.0
generate-badge = "assets/badges/interrogate.svg"
ignore-module = true
ignore-semiprivate = true

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3
use_parentheses = true

[tool.pydocstyle]
match_dir = "^(?!(.venv|docs|tests)).*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
